--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -21,6 +21,8 @@
         <div class="navbar-nav">
             <a class="nav-item nav-link" href="/api/avaliacao" style="font-family: 'rolner'; color: #3D5C30">Avaliações</a>
             <a class="nav-item nav-link" href="/api/consultar" style="font-family: 'rolner'; color: #3D5C30">Livros</a>
+            <a class="nav-item nav-link" href="/api/consultar/autor" style="font-family: 'rolner'; color: #3D5C30">Autores</a>
+
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-family: 'rolner'; color: #3D5C30">
                     Cadastrar
@@ -28,7 +30,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="font-family: 'rolner'; color: #3D5C30">
                     <a class="dropdown-item" href="/api/livros/cadastrar" style="font-family: 'rolner'; color: #3D5C30">Livro</a>
                     <a class="dropdown-item" href="/api/cadastrar" style="font-family: 'rolner'; color: #3D5C30">Avaliação</a>
-                    <a class="dropdown-item" href="/api/avaliacao" style="font-family: 'rolner'; color: #3D5C30">Autores</a>
+                    <a class="dropdown-item" href="/api/autor/cadastrar" style="font-family: 'rolner'; color: #3D5C30">Autores</a>
                 </div>
             </li>
         </div>
