--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -122,6 +122,7 @@
                     <a class="dropdown-item" href="/api/livros/cadastrar" style="font-family: 'rolner'; color: #3D5C30">Livro</a>
                     <a class="dropdown-item" href="/api/cadastrar" style="font-family: 'rolner'; color: #3D5C30">Avaliação</a>
                     <a class="dropdown-item" href="/api/avaliacao" style="font-family: 'rolner'; color: #3D5C30">Autores</a>
+                    <a class="dropdown-item" href="/api/avaliacao" style="font-family: 'rolner'; color: #3D5C30">Editora</a>
                 </div>
             </li>
         </div>
