--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -22,6 +22,8 @@
             <a class="nav-item nav-link" href="/api/avaliacao" style="font-family: 'rolner'; color: #3D5C30">Avaliações</a>
             <a class="nav-item nav-link" href="/api/consultar" style="font-family: 'rolner'; color: #3D5C30">Livros</a>
             <a class="nav-item nav-link" href="/api/consultar/autor" style="font-family: 'rolner'; color: #3D5C30">Autores</a>
+            <a class="nav-item nav-link" href="/api/consultar/editora" style="font-family: 'rolner'; color: #3D5C30">Editoras</a>
+
 
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-family: 'rolner'; color: #3D5C30">
@@ -31,6 +33,8 @@
                     <a class="dropdown-item" href="/api/livros/cadastrar" style="font-family: 'rolner'; color: #3D5C30">Livro</a>
                     <a class="dropdown-item" href="/api/cadastrar" style="font-family: 'rolner'; color: #3D5C30">Avaliação</a>
                     <a class="dropdown-item" href="/api/autor/cadastrar" style="font-family: 'rolner'; color: #3D5C30">Autores</a>
+                    <a class="dropdown-item" href="/api/editora/cadastrar" style="font-family: 'rolner'; color: #3D5C30">Editora</a>
+
                 </div>
             </li>
         </div>
