--- a/src/main/resources/templates/atualiza_avaliacao.html
+++ b/src/main/resources/templates/atualiza_avaliacao.html
@@ -27,10 +27,10 @@
             </li>
         </div>
     </div>
-    <form class="form-inline my-2 my-lg-0" action="/api/buscarPorNome" method="get">
+    <atualiza_avaliacao.htmlform class="form-inline my-2 my-lg-0" action="/api/buscarPorNome" method="get">
         <input class="form-control mr-sm-2" type="search" name="nome" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" style="background-color: #3D5C30; color: white" type="submit">Search</button>
-    </form>
+    </atualiza_avaliacao.htmlform>
 </nav>
 
 <div>
@@ -91,7 +91,6 @@
 
                 <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 20px;">
                     <button type="submit" class="btn btn-primary" style="background: #ee5e5b">Atualizar Livro</button>
-                    <a href="/api/consultar" class="btn btn-secondary" style="margin-left: 20px;">Voltar</a>
                 </div>
             </form>
 
