--- a/src/main/resources/templates/cadastrar_usuario.html
+++ b/src/main/resources/templates/cadastrar_usuario.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Cadastro de Usuário</title>
-    <link rel="stylesheet" href="/livro.css">
+    <link rel="stylesheet" href="/css/livro.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body style="background-color: #f3fcee">
