--- a/src/main/resources/templates/consultar_editoras.html
+++ b/src/main/resources/templates/consultar_editoras.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Editoras</title>
-    <link rel="stylesheet" href="/consultaeditora.css">
+    <link rel="stylesheet" href="/css/consultaeditora.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body style="background-color: #f3fcee">
