--- a/src/main/resources/templates/atualiza_avaliacao.html
+++ b/src/main/resources/templates/atualiza_avaliacao.html
@@ -3,7 +3,7 @@
 <head>
     <title>Atualizar Livro</title>
 
-    <link rel="stylesheet" href="/atualizalivro.css">
+    <link rel="stylesheet" href="/css/atualizalivro.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body style="background-color: #f3fcee">
