--- a/src/main/resources/templates/home2.html
+++ b/src/main/resources/templates/home2.html
@@ -39,11 +39,9 @@
             </li>
         </div>
     </div>
-    <form class="form-inline my-2 my-lg-0">
-        <a href="/api/usuario/login" class="btn btn-outline-light" style="border-color: white; margin-right: 10px; background-color: #f2514f; border-radius: 25px; width: 110px; letter-spacing: 2px; color: white; font-family: 'rolner';">Login</a>
-
-        <a href="/api/usuario/cadastrar" class="btn btn-outline-danger" style="border-color: #f2514f; color: white; border-radius: 25px; letter-spacing: 3px; font-family: 'rolner';">Cadastrar</a>
-    </form>
+    <a href="/api/conta_user">
+        <img src="/image/people.png" alt="Login Icon" width="40" height="40" class="mb-3">
+    </a>
 </nav>
 </body>
 <div class="container" style="font-family: 'rolner'; text-align: justify">
